tools/tests/errors/surf_type_13.ki
# type/operator: a List can only be repeated by an Integer, not a String
discard [1, 2] * "x"
